VERSION "4.3.84"  January 9 2015
fix score for the N10 character

VERSION "4.3.83"  September 8 2014
fix del signe \0376  and added file name to midi file in -midi
fix ^ ornament after e

VERSION "4.3.82"   April 28 2014
try and handle the funny quotes an dashes that Apple Mac TextEdit puts into a file
without asking.

VERSION "4.3.81"   April 18 2014
added some padding for the x prefix ornament in pass1.cc

VERSION "4.3.80"  Nov 20 2013
declared main as int for apple's new compiler
other changes to avoid apple compiler warnings

VERSION "4.3.79"
added a new character, a '/. for strum. use "q" for it.  
Also $extended_character_set to print q-v rather than the ornament
also, modifiet tfm.cc to allow for an apparently new header format
emitted by mf, which omits the name and coding scheme
also added -curly-e for baroque tablature - I though I already had this ??

VERSION "4.3.78"
added a warning when a double quote is used at the end of the line
with nothing to quote
	
VERSION "4.3.77"
allow negative value for $sys-skip
new variable, $top_margin , takes points.

VERSION "4.3.76"  jan 2012
volume control for MIDI, fix for Mesngeau fourish and midi

VERSION "4.3.75"  May 29 2011
fix thick bar for four and five bar staves
make 4 and 5 staff lines work with -h ital to french conversion
(makes them work for whole file)

VERSION "4.3.74"  April 11 2011
fix cewnterline, broken in last title.cc fix

VERSION "4.3.73"  Feb 21 2011
adding seventh course to nmidi

VERSION "4.3.72"  Feb 21 2011
added a fix to title.cc for nmidi with lots of titles
Just take the first one

VERSION "4.3.71"  Feb 10 2011
Big rewriting of title.cc

VERSION "4.3.70" Nov 29 2010
fix time signatures for seven lines

VERSION "4.3.69" Nov 27 2010
fixed repeat dots for seven staves

VERSION "4.3.68"
fixed buffer overflow on title.cc -  LLINE

VERSION "4.3.67" November 21 2010
fixed baroque 2, 3, 8 and 9 bourdons to work

VERSION "4.3.66"  November 21 2020
fixed do_nmidi to handle i l and k
