@@ -115,7 +115,7 @@ MISC = README blute.mf blute9.mf blute8.mf blute85.mf \
 	tlute9.600pk tlute8.600pk tlute7.600pk tlute6.600pk \
 	simple.tab 
 
-DISTFILE = lute_tab4.3.84.tar
+DISTFILE = lute_tab4.3.86.tar
 
 distrib:	 ${DISTFILE}
 
