@@ -987,7 +987,7 @@ Mstore(i_buf *ib, int *l_p, unsigned char *staff, struct file_info *f)
       else if ( c == 232 ) c = 'n'; // N12
       else if ( c == 233 ) c = 'o'; // N13
       else if ( c == 234 ) c = 'p'; // N14
-      else if ( c >= '0' && c <= '9') {
+      else if ( c >= '0' && c <= '9' && (0 && (!(f->m_flags & SPANISH)))) {
 	if (i == 8 && f->line_flag == ON_LINE 
 	    && f->flags & CONV_COR ) {
 	  if ( c < '7' ) c = 'a' + c - '0';
